tests/type_errors/map_result_concat_string.nos
# expect_error: type mismatch
# Issue 15: map result ++ String should be caught at compile time
main() = {
    xs = [1, 2, 3]
    mapped = xs.map(x => x * 2)
    mapped ++ "hello"
}
